source/sass/buyers-guide/views/product.scss
$pni-product-breakpoint-larger: $bp-md;

.product-header {
  padding-bottom: 88px;
  position: relative;

  &.draft-product::before {
    content: "This product is in draft and only visible to CMS-authorised users.";
  }

  .seal-of-approval {
    @include seal-of-approval(1rem, 0, 76px, 76px, 140px, 140px);
  }

  .product-header-content.show-privacy-ding {
    position: relative;

    &:after {
      content: "";
      position: absolute;
      top: 24px;
      right: 24px;
      background: url(../_images/buyers-guide/icon-privacy-ding.svg) center /
        contain no-repeat;
      width: 47px;
      height: 61px;

      @media (min-width: $pni-product-breakpoint-larger) {
        top: 40px;
        width: 63px;
        height: 80px;
      }
    }
  }
}

.related-product {
  .img-container {
    background: $gray-05;
    padding: 10px 0 0 10px;
  }

  .seal-of-approval {
    @include seal-of-approval(5px, 20px, 30px, 30px);
  }

  .adult-content-badge {
    @include adult-content-badge(5px, 20px, 33px, 28px);
  }
}

.product-section-padding-x {
  padding-left: 18px;
  padding-right: 18px;

  @media (min-width: $pni-product-breakpoint-larger) {
    padding-left: 5rem;
    padding-right: 5rem;
  }
}

.privacy-ding-band {
  background: $pni-warning-yellow;
}

.product-detail {
  margin-top: -88px;

  a:not(.btn),
  button:not(.btn) {
    text-decoration: underline;

    @include hover-focus-active {
      color: $dark-blue;
    }
  }

  h3.body,
  h4 {
    font-family: "Nunito Sans";
  }

  .connectivity-requirement {
    display: inline-flex;
    align-items: center;
    color: $gray-60;

    &:not(:last-child) {
      margin-right: 0.5rem;
    }

    &:before {
      content: "";
      display: inline-block;
      height: 18px;
      margin-right: 6px;
    }

    &.use-wifi {
      &:before {
        background: url(../_images/buyers-guide/icon-wifi.svg) center / contain
          no-repeat;
        width: 25px;
      }
    }

    &.use-bluetooth {
      &:before {
        background: url(../_images/buyers-guide/icon-bluetooth.svg) center /
          contain no-repeat;
        width: 10px;
      }
    }
  }

  .worst-case {
    h2 {
      display: inline-block;

      &:before {
        content: "";
        display: inline-block;
        width: 29px;
        height: 27px;
        background: url(../_images/buyers-guide/icon-privacy-ding-mini.svg)
          center / contain no-repeat;
        position: relative;
        top: 4px;
        margin-right: 0.5rem;

        @media (min-width: $pni-product-breakpoint-larger) {
          margin-right: 1rem;
        }
      }
    }
  }

  .it-uses,
  .signup-requirement {
    .separator {
      color: $gray-20;
    }
  }
}

.spy {
  display: flex;
  align-items: center;
  word-break: break-word;
  margin-bottom: 1rem;

  @media (min-width: $pni-product-breakpoint-larger) {
    margin-bottom: 0;
  }

  img {
    margin-right: 15px;
  }

  a {
    text-decoration: underline;
    color: $black;
    font-weight: 400;
  }
}

.minimum-security {
  .criterion:last-child {
    border-bottom: none;
  }
}

.criterion-group {
  margin-bottom: 3rem;
}

.criterion {
  $criterion-padding-y: 1.5rem;
  $criterion-no-border-padding-y: 0.75rem;

  position: relative;
  padding: $criterion-no-border-padding-y 0;

  &:first-of-type {
    padding-top: 0;
  }

  &:not(.no-border) {
    border-color: $gray-20;
    border-style: solid;
    border-width: 1px 0 0 0;
    padding: $criterion-padding-y 0;

    &:first-of-type {
      border-top-width: 0;
    }
  }

  &.bottom-border-only {
    border-top: 0;
  }

  &.show-ding {
    $ding-width: 29px;
    $ding-height: 27px;

    @media (min-width: $pni-product-breakpoint-larger) {
      &:after {
        content: "";
        position: absolute;
        top: 0;
        left: calc(-#{$ding-width} - 1rem);
        background: url(../_images/buyers-guide/icon-privacy-ding-mini.svg)
          center / contain no-repeat;
        width: $ding-width;
        height: $ding-height;
      }
    }

    .rating {
      position: relative;
      display: flex;
      flex-direction: column;

      &:before {
        content: "";
        display: block;
        background: url(../_images/buyers-guide/icon-privacy-ding-mini.svg)
          center / contain no-repeat;
        width: $ding-width;
        height: $ding-height;
        margin-bottom: 0.5rem;

        @media (min-width: $pni-product-breakpoint-larger) {
          display: none;
        }
      }
    }
  }

  p.criterion-label {
    margin-bottom: 0.75rem;
  }

  button.toggle {
    align-self: center;
    margin-left: 10px;
    background: url(../_images/buyers-guide/plus.svg) center center no-repeat;
    background-size: contain;
    border: 0;
    width: 24px;
    height: 24px;
    outline: 0;
    transition: transform 100ms ease-in-out;
    transform-origin: 50% 50%;

    &.open {
      transform: rotate(45deg);
    }
  }

  + p,
  ul {
    // have to override this since PNI does not follow Foundation style guide
    @include text-base-style(null, 300, $black, $white);
    @include set-text-size(16px, 24px);
  }
}

.dotted-section {
  &::before {
    display: block;
    content: " "; /* :before and :after won't work without content... =( */
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 228px;
    background-image: url(../_images/buyers-guide/dot-pattern.svg);
    background-size: 9px 9px;
  }
}

.product-update {
  .title {
    font-family: "Zilla Slab";
    font-size: 22px;
    color: $black;
  }

  .author {
    font-family: "Nunito Sans";
    font-size: 12px;
    color: $gray-40;
  }

  .snippet {
    font-family: "Nunito Sans";
    font-size: 16px;
    color: $black;
    letter-spacing: 0;
    line-height: 24px;
  }
}

.creep-vote-target {
  position: relative;
  min-height: 380px;
  min-width: 290px;
  background: $pni-product-image-background;
}

// Coral Embed
#coral-talk-stream_iframe {
  body {
    padding-bottom: 0;
  }
}

